import React from 'react';
import { shallow } from 'enzyme';

import Room from './Room';
import useChatContext from '../../hooks/useChatContext/useChatContext';
jest.mock('../../hooks/useChatContext/useChatContext');

const mockUseChatContext = useChatContext as jest.Mock<any>;

const mockToggleChatWindow = jest.fn();
mockUseChatContext.mockImplementation(() => ({ setIsChatWindowOpen: mockToggleChatWindow }));

describe('the Room component', () => {
  it('should render correctly with chat window closed', () => {
    const wrapper = shallow(<Room />);
    expect(wrapper).toMatchSnapshot();
  });

  it('should render correctly with chat window open', () => {
    mockUseChatContext.mockImplementationOnce(() => ({ isChatWindowOpen: true }));
    const wrapper = shallow(<Room />);
    expect(wrapper).toMatchSnapshot();
    expect(wrapper.prop('className')).toContain('chatWindowOpen');
  });
});
